# simulink-code-review

./: .gitignore  CHANGELOG.md  README.md  azure-pipelines.yml  build.ps1  pyproject.toml
.github/workflows/: test.yml
compare_tool/: __init__.py  a2l_rules.py  arxml_rules.py  c_rules.py  diff_engine.py  gui.py  main.py  report.py  scanner.py  view_model.py
compare_tool/qtviewer/: __init__.py  app.py  diffpane.py  minimap.py  summary.py  summary_model.py  tree.py  worker.py
packaging/: build-viewer.ps1  compare-tool.spec  compare-viewer.spec  entry.py  viewer_entry.py
tests/: test_engine.py  test_failsafe.py  test_qtviewer.py  test_report.py  test_rules.py  test_summary_model.py  test_view_model.py
tests/fixtures/model_new/: Ctrl.c  Ctrl.h  Ctrl_component.arxml  Ctrl_types.h  rtwtypes.h
tests/fixtures/model_old/: Ctrl.c  Ctrl_component.arxml
tests/fixtures/new/a2l/: cal.a2l  comment_only.a2l
tests/fixtures/new/arxml/: iface.arxml
tests/fixtures/old/a2l/: cal.a2l  comment_only.a2l
tests/fixtures/old/arxml/: iface.arxml
