[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codegen-compare-tool"
authors = [{ name = "Long Vo Thien" }]
description = "Diff two AUTOSAR MATLAB/Simulink codegen folders, filtering out generator noise"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["autosar", "simulink", "matlab", "embedded-coder", "codegen", "diff", "arxml", "a2l", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Embedded Systems",
]
dynamic = ["version"]

# core tool is stdlib-only; the side-by-side viewer (--qt) needs PySide6.
# install with:  pip install codegen-compare-tool[viewer]
[project.optional-dependencies]
viewer = ["PySide6>=6.5"]

[project.urls]
Homepage = "https://github.com/longvo92/codegen-compare-tool"
Issues = "https://github.com/longvo92/codegen-compare-tool/issues"

[project.scripts]
compare-tool = "compare_tool.main:main"

[tool.setuptools]
packages = ["compare_tool", "compare_tool.qtviewer"]

[tool.setuptools.dynamic]
version = { attr = "compare_tool.__version__" }
